--- a/index.html
+++ b/index.html
@@ -19,36 +19,25 @@
       font-size: 1.06em;
       word-break: break-all;
     }
-    .fc-timegrid-event, .fc-timegrid-event .fc-event-title {
-      color: #222 !important;
-      min-height: 50px !important;
-      height: auto !important;
-      white-space: pre-line !important;
-      overflow: visible !important;
-    }
+    .fc-event, .fc-event-title, .fc-timegrid-event .fc-event-title, .fc-daygrid-event .fc-event-title { color: #222 !important; }
     .course-icon {
       font-size: 1.3em;
       margin-right: 2px;
       vertical-align: middle;
     }
     .highlight-red { color: #C00000 !important; font-weight: bold !important;}
-    .important-change {
-      border: 4px solid #c00 !important;
-      box-sizing: border-box !important;
-    }
+    .emph-border { border: 3px solid #d00 !important; box-sizing: border-box; }
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
-      border: 1.5px solid #aaa; padding: 0.5em; text-align: center; font-size: 1.08em;
+      border: 1px solid #aaa; padding: 0.5em; text-align: center; font-size: 1.08em;
     }
     #list-container th { background: #f4f4f4; font-size: 1.13em;}
-    .important-row { border: 2.5px solid #c00 !important; }
-    .important-cell { color: #C00000 !important; font-weight: bold !important; }
+    .emph-row { border: 3px solid #d00 !important; }
     @media (max-width: 800px) {
       #calendar, #list-container { width: 100%; font-size: 0.96em;}
       #filter-bar { font-size: 1.1em;}
     }
-    .fc-event, .fc-event-title, .fc-timegrid-event .fc-event-title, .fc-daygrid-event .fc-event-title { color: #222 !important; }
   </style>
 </head>
 <body>
@@ -65,7 +54,6 @@
 <script>
 const apiUrl = "https://script.google.com/macros/s/AKfycbxbpuFcInB-xFFGSVJReKEbp2DE5k8mDs8aKx80o94_fICApzgZ7_RI-j2kbDikG0jo/exec";
 
-// 標準化日期格式
 function fixDate(dateStr) {
   if (!dateStr) return "";
   if (dateStr.startsWith("1899") || dateStr.startsWith("Invalid")) return "";
@@ -81,7 +69,6 @@ function fixDate(dateStr) {
   return dateStr;
 }
 function fixTime(t) {
-  // 只保留 HH:mm 格式
   if (!t) return "";
   let m = t.match(/^(\d{1,2}):(\d{2})/);
   if (m) {
@@ -112,10 +99,9 @@ function getColorByName(name) {
 function getCourseStatus(courseName, eventDate, allData) {
   const allEvents = allData.filter(x => getCourseLabel(x) === courseName)
     .sort((a, b) => new Date(a["日期"]) - new Date(b["日期"]));
-  const total = parseInt(allEvents[0]["總堂數"] || allEvents.length);
+  const total = parseInt(allEvents[0]?.["總堂數"] || allEvents.length);
   const today = new Date();
-  const eventDay = new Date(eventDate);
-  const lastDay = new Date(allEvents[allEvents.length - 1]["日期"]);
+  const lastDay = new Date(allEvents[allEvents.length - 1]?.["日期"]);
   const finishedCount = allEvents.filter(e => new Date(e["日期"]) < today).length;
   if (today > lastDay) {
     return { icon: "🔴", color: "#e74c3c", label: "已結束" };
@@ -126,17 +112,53 @@ function getCourseStatus(courseName, eventDate, allData) {
     return { icon: "🟡", color: "#f7b731", label: "進行中已達1/3" };
   }
 }
-function fieldClass(item, field) {
-  if (item["異動強調"] !== "是") return "";
-  // 只有「異動強調」時才判斷紅字
-  if (field === '日期' && item["異動日期"]) return "important-cell";
-  if (field === '教室' && item["異動教室"]) return "important-cell";
-  return "";
-}
-function getClass(item) {
-  const result = [];
-  if (item["異動強調"] === "是") result.push("important-change");
-  return result;
+
+// 主要合併與異動粗框邏輯
+function mergeByEmphasize(data) {
+  // 1. 用課程名稱+教師+原日期為索引
+  const map = new Map();
+  data.forEach(row => {
+    const key = [getCourseLabel(row), row["教師"], fixDate(row["日期"])].join("|");
+    map.set(key, row);
+  });
+  const keepRows = [];
+  data.forEach(row => {
+    // 若有異動強調，優先保留異動後那一筆，且移除原本那一天
+    if (row["異動強調"] === "是") {
+      const emphRow = { ...row, __emphasize: true, __displayDate: fixDate(row["異動日期"] || row["日期"]) };
+      // 防止重複
+      if (!keepRows.find(r => getCourseLabel(r) === getCourseLabel(row) && r["教師"] === row["教師"] && r.__displayDate === emphRow.__displayDate)) {
+        keepRows.push(emphRow);
+      }
+    } else {
+      // 沒異動強調，但也不能有被異動的相同課、同教師、同原日期
+      const gotEmph = data.find(r =>
+        r["異動強調"] === "是" &&
+        getCourseLabel(r) === getCourseLabel(row) &&
+        r["教師"] === row["教師"] &&
+        fixDate(r["日期"]) === fixDate(row["日期"])
+      );
+      if (!gotEmph) {
+        keepRows.push({ ...row, __emphasize: false, __displayDate: fixDate(row["日期"]) });
+      }
+    }
+  });
+  // 依日期排序
+  keepRows.sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+  // 堂次重新編號（依課程＋教師分組）
+  const courseGroup = {};
+  keepRows.forEach(item => {
+    const groupKey = getCourseLabel(item) + "|" + (item["教師"]||"");
+    if (!courseGroup[groupKey]) courseGroup[groupKey] = [];
+    courseGroup[groupKey].push(item);
+  });
+  Object.values(courseGroup).forEach(group => {
+    group.forEach((item, idx) => {
+      item.__showIdx = idx+1;
+      item.__showTotal = group.length;
+    });
+  });
+  return keepRows;
 }
 
 let allData = [];
@@ -146,8 +168,7 @@ document.addEventListener('DOMContentLoaded', async function () {
   const data = await res.json();
   allData = data;
 
-  // 依據日期排序
-  const merged = [...data].filter(x=>x["日期"]).sort((a, b) => fixDate(a["日期"]).localeCompare(fixDate(b["日期"])));
+  const merged = mergeByEmphasize(data);
 
   const courses = [...new Set(merged.map(item => getCourseLabel(item)))].sort((a, b) => {
     return courseSortKey(a) > courseSortKey(b) ? 1 : -1;
@@ -173,23 +194,20 @@ document.addEventListener('DOMContentLoaded', async function () {
 
 function renderCalendar(data) {
   const events = data.map(item => {
-    const date = fixDate(item["日期"]);
+    const date = item.__displayDate;
     const startTime = fixTime(item["異動起始時間"] || item["起始時間"]);
     const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const course = getCourseLabel(item);
     const status = getCourseStatus(course, date, allData);
     const bgColor = getColorByName(item["課程名稱"]);
     const classroom = item["異動教室"] || item["教室"] || "";
-    let title = `${course}\n${startTime} - ${endTime}`;
-    if (item["教師"]) title += ` ${item["教師"]}`;
-    if (classroom) title += `\n${item["異動強調"]==="是" && item["異動教室"] ? '<span class="highlight-red">'+classroom+'</span>' : classroom}`;
-    // 日期異動時，在title顯示紅字日期（只在表格欄有意義，日曆通常以格為主）
+    let title = `${course}\n${startTime} - ${endTime}${item["教師"] ? " " + item["教師"] : ""}${classroom ? "\n" + classroom : ""}`;
     return {
       title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: getClass(item),
-      extendedProps: { ...item, bg: bgColor, statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
+      classNames: item.__emphasize ? ["emph-border"] : [],
+      extendedProps: { ...item, bg: bgColor, fg: "#222", statusIcon: status.icon, statusLabel: status.label, course, classroom, startTime, endTime }
     };
   });
   if (calendar) calendar.destroy();
@@ -219,16 +237,30 @@ function renderCalendar(data) {
         titleNode.prepend(iconNode);
       }
       info.el.style.backgroundColor = info.event.extendedProps.bg;
-      info.el.title = info.event.extendedProps.statusLabel;
+      info.el.style.color = info.event.extendedProps.fg;
       info.el.style.fontWeight = "bold";
       info.el.style.borderRadius = "7px";
-      info.el.style.border = info.event.classNames.includes("important-change") ? "4px solid #c00" : "none";
-      if (titleNode && info.event.extendedProps["異動強調"]==="是") {
-        // 教室異動紅字
+      info.el.style.border = info.event.classNames.includes("emph-border") ? "3px solid #d00" : "none";
+      info.el.title = info.event.extendedProps.statusLabel;
+      info.el.style.height = "auto";
+      // 異動欄位紅字
+      if (info.event.extendedProps.__emphasize) {
         if (info.event.extendedProps["異動教室"]) {
           titleNode.innerHTML = titleNode.innerHTML.replace(
             info.event.extendedProps["異動教室"],
             `<span class="highlight-red">${info.event.extendedProps["異動教室"]}</span>`
+          );
+        }
+        if (info.event.extendedProps["異動起始時間"]) {
+          titleNode.innerHTML = titleNode.innerHTML.replace(
+            info.event.extendedProps.startTime,
+            `<span class="highlight-red">${info.event.extendedProps.startTime}</span>`
+          );
+        }
+        if (info.event.extendedProps["異動結束時間"]) {
+          titleNode.innerHTML = titleNode.innerHTML.replace(
+            info.event.extendedProps.endTime,
+            `<span class="highlight-red">${info.event.extendedProps.endTime}</span>`
           );
         }
       }
@@ -250,27 +282,26 @@ function renderList(data) {
     <th>堂次</th>
     <th>備註</th>
   </tr>`;
-  let rownum = 0;
   for (let item of data) {
-    const date = fixDate(item["日期"]);
+    const date = item.__displayDate;
     const startTime = fixTime(item["異動起始時間"] || item["起始時間"]);
     const endTime = fixTime(item["異動結束時間"] || item["結束時間"]);
     const classroom = item["異動教室"] || item["教室"] || "";
     const course = getCourseLabel(item);
-    let rowClass = (item["異動強調"] === "是") ? "important-row" : "";
+    let rowClass = item.__emphasize ? "emph-row" : "";
+    let dateCell = item.__emphasize && item["異動日期"] ? `<span class="highlight-red">${date}</span>` : date;
+    let timeCell = `${item.__emphasize && item["異動起始時間"] ? `<span class="highlight-red">${startTime}</span>` : startTime} - ${item.__emphasize && item["異動結束時間"] ? `<span class="highlight-red">${endTime}</span>` : endTime}`;
+    let classroomCell = item.__emphasize && item["異動教室"] ? `<span class="highlight-red">${classroom}</span>` : classroom;
     html += `<tr class="${rowClass}">
       <td style="font-size:1.3em;">🟡</td>
-      <td class="${fieldClass(item, "日期")}">${date}</td>
-      <td>
-        <span>${startTime}</span> - <span>${endTime}</span>
-      </td>
+      <td>${dateCell}</td>
+      <td>${timeCell}</td>
       <td>${course}</td>
       <td>${item["教師"]||""}</td>
-      <td class="${fieldClass(item, "教室")}">${classroom}</td>
-      <td>${item["當前堂數"]||""}${item["總堂數"]?("/"+item["總堂數"]):""}</td>
+      <td>${classroomCell}</td>
+      <td>${item.__showIdx ? (item.__showIdx + '/' + item.__showTotal) : ''}</td>
       <td>${item["備註"]||""}</td>
     </tr>`;
-    rownum++;
   }
   html += `</table>`;
   document.getElementById('list-content').innerHTML = html;
@@ -278,3 +309,4 @@ function renderList(data) {
 </script>
 </body>
 </html>
+
