--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       white-space: pre-line !important; font-weight: bold; font-size: 1.06em;
     }
     .highlight-red { color: #C00000 !important; font-weight: bold !important;}
-    .bold-outline { border: 2.5px solid #c00 !important; }
+    .bold-outline { border: 3px solid #c00 !important; box-shadow: 0 0 3px #c00 !important;}
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
@@ -24,7 +24,6 @@
     }
     #list-container th { background: #f4f4f4; font-size: 1.13em;}
     .strong-txt { color: #c00; font-weight: bold; }
-    .calendar-strong { border: 3px solid #c00 !important; box-shadow: 0 0 3px #c00 !important;}
     @media (max-width: 800px) {
       #calendar, #list-container { width: 100%; font-size: 0.97em;}
       #filter-bar { font-size: 1em;}
@@ -107,24 +106,32 @@ function getCourseStatus(courseName, eventDate, allData) {
   }
 }
 
-// 合併邏輯：只要有「異動強調」為是的，套用粗紅框/紅字，其他正常
+// 強制清除：若同課程+教師+日期的資料有異動強調，則只保留異動後一筆
 function mergeAndSort(data) {
-  // 只顯示「異動強調」最後一次為「是」的該日課程（去重）
-  const recordMap = {};
+  // 以 key = 課程|教師|日期 做唯一判斷，異動強調「是」時用該日覆蓋舊資料
+  const courseMap = new Map();
   data.forEach(item => {
-    const key = [
-      getCourseLabel(item),
-      item["教師"]||"",
-      fixDate(item["日期"])
-    ].join('|');
-    recordMap[key] = {
-      ...item,
-      __displayDate: fixDate(item["日期"]),
-      __isStrong: (item["異動強調"]==="是")
-    };
+    const keyNormal = [getCourseLabel(item), item["教師"]||"", fixDate(item["日期"])].join('|');
+    // 有異動強調就只保留這一筆（不顯示原資料）
+    if (item["異動強調"]==="是") {
+      courseMap.set(keyNormal, {
+        ...item,
+        __displayDate: fixDate(item["日期"]),
+        __isStrong: true
+      });
+    } else {
+      // 若此 key 尚未被異動資料覆蓋才加進來
+      if (!courseMap.has(keyNormal)) {
+        courseMap.set(keyNormal, {
+          ...item,
+          __displayDate: fixDate(item["日期"]),
+          __isStrong: false
+        });
+      }
+    }
   });
-  // 依日期排序
-  return Object.values(recordMap).sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+  // 按日期排序
+  return Array.from(courseMap.values()).sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
 }
 
 let allData = [];
@@ -170,7 +177,8 @@ function renderCalendar(data) {
       title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: item.__isStrong ? ["calendar-strong"] : [],
+      classNames: item.__isStrong ? ["bold-outline"] : [],
+      backgroundColor: getColorByName(course),
       extendedProps: { ...item, statusIcon: status.icon }
     };
   });
@@ -187,7 +195,6 @@ function renderCalendar(data) {
     eventOrder: "title,start",
     dayMaxEvents: false,
     eventDidMount: function(info) {
-      // 狀態icon
       let iconNode = document.createElement("span");
       iconNode.className = "course-icon";
       iconNode.innerText = info.event.extendedProps.statusIcon;
@@ -195,9 +202,16 @@ function renderCalendar(data) {
       if (titleNode && !titleNode.querySelector('.course-icon')) {
         titleNode.prepend(iconNode);
       }
-      if (info.event.classNames.includes("calendar-strong")) {
+      // 顏色底
+      info.el.style.backgroundColor = info.event.backgroundColor;
+      info.el.style.color = "#222";
+      // 異動強調粗紅框
+      if (info.event.classNames.includes("bold-outline")) {
         info.el.style.border = "3px solid #c00";
         info.el.style.boxShadow = "0 0 3px #c00";
+      } else {
+        info.el.style.border = "none";
+        info.el.style.boxShadow = "none";
       }
       titleNode && (titleNode.style.whiteSpace = "pre-line");
     }
@@ -206,7 +220,6 @@ function renderCalendar(data) {
 }
 
 function renderList(data) {
-  // 確認目前頁面是否有課程資料、是否有異動強調
   let html = `<table>
   <tr>
     <th>狀態</th>
@@ -227,9 +240,7 @@ function renderList(data) {
     html += `<tr class="${strongClass}">
       <td style="font-size:1.3em;">🟡</td>
       <td class="${item.__isStrong && item["異動日期"] ? "strong-txt" : ""}">${date}</td>
-      <td>
-        <span>${startTime}</span> - <span>${endTime}</span>
-      </td>
+      <td><span>${startTime}</span> - <span>${endTime}</span></td>
       <td>${course}</td>
       <td>${item["教師"]||""}</td>
       <td class="${item.__isStrong && item["異動教室"] ? "strong-txt" : ""}">${classroom}</td>
@@ -237,8 +248,6 @@ function renderList(data) {
     </tr>`;
   }
   html += `</table>`;
-
-  // 顯示本課程堂數
   let shownCourse = document.getElementById("courseSelect").value;
   let filtered = (!shownCourse) ? data : data.filter(item => getCourseLabel(item) === shownCourse);
   let total = filtered.length;
@@ -250,3 +259,5 @@ function renderList(data) {
 </script>
 </body>
 </html>
+``
+
