--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       white-space: pre-line !important; font-weight: bold; font-size: 1.06em;
     }
     .highlight-red { color: #C00000 !important; font-weight: bold !important;}
-    .bold-outline { border: 3px solid #c00 !important; box-shadow: 0 0 3px #c00 !important;}
+    .bold-outline { border: 2.5px solid #c00 !important; }
     #list-container { max-width: 1100px; margin: 2em auto; }
     #list-container table { border-collapse: collapse; width: 100%; }
     #list-container th, #list-container td {
@@ -24,6 +24,7 @@
     }
     #list-container th { background: #f4f4f4; font-size: 1.13em;}
     .strong-txt { color: #c00; font-weight: bold; }
+    .calendar-strong { border: 3px solid #c00 !important; box-shadow: 0 0 3px #c00 !important;}
     @media (max-width: 800px) {
       #calendar, #list-container { width: 100%; font-size: 0.97em;}
       #filter-bar { font-size: 1em;}
@@ -106,32 +107,23 @@ function getCourseStatus(courseName, eventDate, allData) {
   }
 }
 
-// 強制清除：若同課程+教師+日期的資料有異動強調，則只保留異動後一筆
-function mergeAndSort(data) {
-  // 以 key = 課程|教師|日期 做唯一判斷，異動強調「是」時用該日覆蓋舊資料
-  const courseMap = new Map();
+// 僅保留同課程-教師-日期的「最新一筆」資料（資料來源已排序、會覆蓋舊資料）
+// 「異動強調」=是時加粗框與紅字
+function filterLatestOnly(data) {
+  const latestMap = {};
   data.forEach(item => {
-    const keyNormal = [getCourseLabel(item), item["教師"]||"", fixDate(item["日期"])].join('|');
-    // 有異動強調就只保留這一筆（不顯示原資料）
-    if (item["異動強調"]==="是") {
-      courseMap.set(keyNormal, {
-        ...item,
-        __displayDate: fixDate(item["日期"]),
-        __isStrong: true
-      });
-    } else {
-      // 若此 key 尚未被異動資料覆蓋才加進來
-      if (!courseMap.has(keyNormal)) {
-        courseMap.set(keyNormal, {
-          ...item,
-          __displayDate: fixDate(item["日期"]),
-          __isStrong: false
-        });
-      }
-    }
+    const key = [
+      getCourseLabel(item),
+      item["教師"]||"",
+      fixDate(item["日期"])
+    ].join('|');
+    latestMap[key] = {
+      ...item,
+      __displayDate: fixDate(item["日期"]),
+      __isStrong: (item["異動強調"]==="是")
+    };
   });
-  // 按日期排序
-  return Array.from(courseMap.values()).sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
+  return Object.values(latestMap).sort((a, b) => a.__displayDate.localeCompare(b.__displayDate));
 }
 
 let allData = [];
@@ -142,7 +134,7 @@ document.addEventListener('DOMContentLoaded', async function () {
   const data = await res.json();
   allData = data;
 
-  let merged = mergeAndSort(data);
+  let merged = filterLatestOnly(data);
 
   const courses = [...new Set(merged.map(item => getCourseLabel(item)))].sort((a, b) => courseSortKey(a) > courseSortKey(b) ? 1 : -1);
   const select = document.getElementById('courseSelect');
@@ -177,7 +169,7 @@ function renderCalendar(data) {
       title: title,
       start: `${date}T${startTime}`,
       end: `${date}T${endTime}`,
-      classNames: item.__isStrong ? ["bold-outline"] : [],
+      classNames: item.__isStrong ? ["calendar-strong"] : [],
       backgroundColor: getColorByName(course),
       extendedProps: { ...item, statusIcon: status.icon }
     };
@@ -195,6 +187,7 @@ function renderCalendar(data) {
     eventOrder: "title,start",
     dayMaxEvents: false,
     eventDidMount: function(info) {
+      // 狀態icon
       let iconNode = document.createElement("span");
       iconNode.className = "course-icon";
       iconNode.innerText = info.event.extendedProps.statusIcon;
@@ -202,16 +195,12 @@ function renderCalendar(data) {
       if (titleNode && !titleNode.querySelector('.course-icon')) {
         titleNode.prepend(iconNode);
       }
-      // 顏色底
-      info.el.style.backgroundColor = info.event.backgroundColor;
-      info.el.style.color = "#222";
-      // 異動強調粗紅框
-      if (info.event.classNames.includes("bold-outline")) {
+      // 色塊底色
+      info.el.style.backgroundColor = info.event.backgroundColor || "#CDEDFD";
+      // 異動強調粗框
+      if (info.event.classNames.includes("calendar-strong")) {
         info.el.style.border = "3px solid #c00";
         info.el.style.boxShadow = "0 0 3px #c00";
-      } else {
-        info.el.style.border = "none";
-        info.el.style.boxShadow = "none";
       }
       titleNode && (titleNode.style.whiteSpace = "pre-line");
     }
@@ -240,7 +229,9 @@ function renderList(data) {
     html += `<tr class="${strongClass}">
       <td style="font-size:1.3em;">🟡</td>
       <td class="${item.__isStrong && item["異動日期"] ? "strong-txt" : ""}">${date}</td>
-      <td><span>${startTime}</span> - <span>${endTime}</span></td>
+      <td>
+        <span>${startTime}</span> - <span>${endTime}</span>
+      </td>
       <td>${course}</td>
       <td>${item["教師"]||""}</td>
       <td class="${item.__isStrong && item["異動教室"] ? "strong-txt" : ""}">${classroom}</td>
@@ -248,6 +239,8 @@ function renderList(data) {
     </tr>`;
   }
   html += `</table>`;
+
+  // 顯示本課程堂數
   let shownCourse = document.getElementById("courseSelect").value;
   let filtered = (!shownCourse) ? data : data.filter(item => getCourseLabel(item) === shownCourse);
   let total = filtered.length;
@@ -259,5 +252,3 @@ function renderList(data) {
 </script>
 </body>
 </html>
-``
-
